JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre5

Thanks to Ollie Rutherfurd, Peter Lundqvist and Silas Smith for
contributing to this release.

{{{ Syntax Highlighting

- Updated Icon syntax highlighting (Silas Smith).

- Updated Pike syntax highlighting (Peter Lundqvist).

- The "if" in #include <net/if.h> is no longer highlighted in C and C++
  modes.

}}}
{{{ Miscellaneous Changes

- Drag and drop in the text area. You can disable this in the Mouse pane
  of the Global Options dialog box. The functionality of the DragAndDrop
  plugin (handling files dropped from your operating system's file
  manager) has been incorporated too.

- Files that don't exist on disk are no longer saved in the perspective
  (Ollie Rutherfurd).

- The end of a fold is now indicated in the gutter.

- Added "Plugin Options" button to plugin manager.

- Pressing a non-alphanumeric character with the 'Complete Word' popup
  showing now inserts the currently selected entry first, instead of
  just closing the popup and then inserting the entered character.

- If there are several search results in one line, clicking the line in
  the HyperSearch Results window now selects all occurrences, not just
  the first one.

- If regular expressions are on, the search bar now shows an error
  message instead of silently failing if you attempt a reverse search
  with S+ENTER (reverse search with regular expressions is not
  supported).

- Added an option for disabling the confirmation dialog box shown by the
  "Save All Buffers" command.

- When running on Java 2 version 1.4, jEdit now uses NIO APIs to obtain
  a list of supported file encodings. On Java 2 version 1.3, the same
  hard-coded list of encodings is offered as before.

- The Docking option pane has been reintroduced since a number of people
  preferred the old docking style (the new direct manipulation still
  works of course).

}}}
{{{ Bug Fixes

- Fixed international keys on MacOS X.
